tests/errors/too-many-args.ink
~ a(1, 2, 3)

== function a(arg1, arg2)
~ return arg1 + arg2
